--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <nav id="mainNav"> </nav>
         <!-- Segunda Fila-->
         <nav id="mainNav">Resolvemos las necesidades de negocio de nuestros clientes  mediante conocimiento, experiencia y tecnología</nav> 
-        <imagen id="imagen"><img src="/img/principal2.png"></imagen>
+        <imagen id="imagen"><img src="./img/principal2.png"></imagen>
         <!-- Tercera Fila-->
         <footer id="footer">Somos Expertos  en Consultoría de TI, Microsoft Dynamics 365, Análisis de Datos, Desarrollo de Software y Apps Empresariales</footer>
     </div>
