--- a/TP final_quienes somos.html
+++ b/TP final_quienes somos.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/TP final_quienes somos.css">
+    <link rel="stylesheet" href="./css/TP final_quienes somos.css">
     <link rel="icon" href="/img/tabero.png">
     <title>Quienes Somos</title>
    
