Update TP final_quienes somos.html

--- a/TP final_quienes somos.html
+++ b/TP final_quienes somos.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/TP final_quienes somos.css">
-    <link rel="icon" href="/img/tabero.png">
+    <link rel="icon" href="./img/tabero.png">
     <title>Quienes Somos</title>
    
 
