--- a/TP final_sucursales.html
+++ b/TP final_sucursales.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/TP final_sucursales.css">
-    <link rel="icon" href="/img/google_maps_icon_v2.ico">
+    <link rel="stylesheet" href="./css/TP final_sucursales.css">
+    <link rel="icon" href="./img/google_maps_icon_v2.ico">
     <title>Sucursales</title>
    
 
