--- a/TP final_tecnologias.html
+++ b/TP final_tecnologias.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tecnologías</title>
-    <link rel="stylesheet" href="/css/TP final_tecnologias.css">
-    <link rel="icon" href="/img/tecno.ico">
+    <link rel="stylesheet" href="./css/TP final_tecnologias.css">
+    <link rel="icon" href="./img/tecno.ico">
    </head>
 <body>
     <h1>Tecnologías</h1>
@@ -14,9 +14,9 @@
       <table border="0">    <!-- Comienzo de la tabla -->
     
             <tr>                <!-- Comienzo de la fila 1 -->
-                <td><img src="/img/angular.png" alt="Angular" usemap="#angular"></td>       
-                <td><img src="/img/java.png" alt="Java" usemap="#java"></td> 
-                <td><img src="/img/sqlServer.png" alt="Sql Server" usemap="#sqlServer"></td>   
+                <td><img src="./img/angular.png" alt="Angular" usemap="#angular"></td>       
+                <td><img src="./img/java.png" alt="Java" usemap="#java"></td> 
+                <td><img src="./img/sqlServer.png" alt="Sql Server" usemap="#sqlServer"></td>   
             </tr>               <!-- Final de la fila 1 -->
 
             <tr>                <!-- Comienzo de la fila 2 en blanco porque los logos de la fila 3 son mas chicos -->
@@ -26,9 +26,9 @@
           </tr>               <!-- Final de la fila 2 -->
 
             <tr>                <!-- Comienzo de la fila 3 -->
-              <td><img src="/img/react.png" alt="Angular" usemap="#angular"></td>       
-              <td><img src="/img/azure.png" alt="Java" usemap="#java"></td> 
-              <td><img src="/img/net.png" alt="Sql Server" usemap="#sqlServer"></td>   
+              <td><img src="./img/react.png" alt="Angular" usemap="#angular"></td>       
+              <td><img src="./img/azure.png" alt="Java" usemap="#java"></td> 
+              <td><img src="./img/net.png" alt="Sql Server" usemap="#sqlServer"></td>   
           </tr>               <!-- Final de la fila 3 -->
 
           <tr>                <!-- Comienzo de la fila 4 en blanco porque los logos de la fila 3 son mas chicos -->
@@ -38,9 +38,9 @@
           </tr>               <!-- Final de la fila 4 -->
 
           <tr>                <!-- Comienzo de la fila 5 -->
-            <td><img src="/img/dynamic.png" alt="Angular" usemap="#angular"></td>         
-            <td><img src="/img/core.png" alt="Java" usemap="#java"></td> 
-            <td><img src="/img/node.png" alt="Sql Server" usemap="#sqlServer"></td>   
+            <td><img src="./img/dynamic.png" alt="Angular" usemap="#angular"></td>         
+            <td><img src="./img/core.png" alt="Java" usemap="#java"></td> 
+            <td><img src="./img/node.png" alt="Sql Server" usemap="#sqlServer"></td>   
           </tr>               <!-- Final de la fila 5 -->
              
       </table>              <!-- Final de la tabla -->
