Update Validacion de campos form.html

--- a/Validacion de campos form.html
+++ b/Validacion de campos form.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/TP final_contacto.css" />
-    <link rel="icon" href="/img/Contacto.ico"/>
+    <link rel="stylesheet" href="./css/TP final_contacto.css" />
+    <link rel="icon" href="./img/Contacto.ico"/>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -145,5 +145,5 @@
       
     </div>
   </body>
-  <script src="/js/TP final_contacto.js"></script>
+  <script src="./js/TP final_contacto.js"></script>
 </html>
