Update TP final_quienes somos.html

--- a/TP final_quienes somos.html
+++ b/TP final_quienes somos.html
@@ -42,7 +42,7 @@
             <p>Integridad. Transparencia.  Libertad.  Escucha. Excelencia.  Diferencia.  Resolución.  Lealtad.  Pasión. Claridad</p>
         </div>       
         <div class="imagen_c"> <!-- Imagen central que divide filosifía de mision y visión-->
-            <img src="/img/Imagen divisoria.png">
+            <img src="./img/Imagen divisoria.png">
         </div>
         <div class="der">
             <h2><b>Misión</b></h2>
